--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
-body{
+body
+{
     color: #333;
     text-align: center;
-    font-family: "Arial";
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -10,7 +11,7 @@ body{
 #cabecera
 {
     background: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
@@ -27,13 +28,17 @@ body{
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
-    border: 1px solid #000;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    padding: 1em;
 }
